[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "scikit-agent"
authors = [
  { name = "scikit-agent Team", email = "spb413@nyu.edu" },
]
description = "Specify, solve, and simulate dynamic stochastic optimization problems."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "cairosvg",
  "gymnasium",
  "ipython",
  "matplotlib",
  "numba",
  "numpy",
  "pydot",
  "pyyaml",
  "scipy",
  "stable-baselines3",
  "sympy",
  "torch >=2.0",
  "xarray",
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-xdist",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "sphinx-autobuild",
  "furo>=2023.08.17",
  "sphinx-gallery",
  "sphinx-design",
  "matplotlib>=3.0",
  "pillow",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/skagent/_version.py"
metadata.allow-direct-references = true

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.hatch.build.targets.wheel]
packages = ["src/skagent"]

# For editable installs
[tool.hatch.build.targets.editable]
packages = ["src/skagent"]

[tool.pytest.ini_options]
# Put the project root on sys.path so tests can do `from tests.conftest import ...`
# under a plain `pytest` invocation (not just `python -m pytest`).
pythonpath = ["."]
# Only collect the committed suite; ignore stray *_test.py scripts in the repo root.
testpaths = ["tests"]
markers = [
    "slow: long-running tests (e.g. RL convergence); deselected unless --runslow is passed.",
]
